<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.activities.ResetPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="10dp"
        android:id="@+id/constraint"
        android:elevation="16dp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/reset_password"
            android:textColor="@color/ColorWhiteNote"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/email"
            android:background="@android:color/transparent"
            android:gravity="top|start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            app:layout_constraintBottom_toTopOf="@id/btnReset">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:maxLength="18"
                android:layout_gravity="top|start"
                android:fontFamily="@font/manrope_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/btn_round"
            android:fontFamily="@font/manrope_bold"
            android:textFontWeight="500"
            android:text="@string/reset"
            android:textColor="@color/ColorWhiteNote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmailLyt"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>